# ApexRS

./: .gitignore  Cargo.toml  README.md
src/: convexity.rs  coordinate.rs  lib.rs  point2d.rs  polygon.rs  shape2d.rs  two_dimensional.rs
src/detail/: mod.rs  sync_status.rs
src/operations/: mod.rs  translate.rs
src/test/: mod.rs
src/test/data/: mod.rs  polygon.rs
tests/: coordinate.rs  point2d.rs  polygon.rs  tests.rs
tests/data/: polygon.rs
tests/operations/: mod.rs  translate.rs
