[package]
name = "apex"
version = "0.1.0"
authors = ["Ghostkeeper"]
description = "Massively parallel geometry operations"
edition = "2024"
repository = "https://github.com/Ghostkeeper/Apex-rs"
license = "AGPL-3.0-or-later"

[dependencies]
auto_ops = "0.3.0"
rayon = "1.11.0"
cubecl = "0.8.1"

[dev-dependencies]
test-case = "3.3.1"